--- a/Calculatrice/Calculatrice/CalcStyle.css
+++ b/Calculatrice/Calculatrice/CalcStyle.css
@@ -40,7 +40,7 @@ nav .onglets a {
     margin: 0 auto;
     width: 100%;
     height: 836px;
-    background-color: aqua;
+    background: linear-gradient(to bottom,black, aqua, black); ;
 }
 
 .textcalc{
@@ -52,6 +52,7 @@ nav .onglets a {
     margin: 10px;
     padding: 20px;
     text-decoration: underline black;
+    color: whitesmoke;
 }
 
 .result{
@@ -120,7 +121,7 @@ button:active {
     border-top: 5px solid black;
     background-color: rgb(28, 28, 28);
     color: white;
-    padding: 30px 100px;
+    
 }
 
 @media screen and (max-width:680px) {
