--- a/Calculatrice/Calculatrice/CalcStyle.css
+++ b/Calculatrice/Calculatrice/CalcStyle.css
@@ -40,7 +40,7 @@ nav .onglets a {
     margin: 0 auto;
     width: 100%;
     height: 836px;
-    background: linear-gradient(to bottom,black, aqua, black); ;
+    background: linear-gradient(45deg,aqua, gray,black,  gray, aqua); 
 }
 
 .textcalc{
